--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   "dependencies": {
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@vercel/examples-ui": "^0.3.51",
+    "configcat-js": "^6.0.0",
+    "configcat-node": "^7.0.0",
+    "js-cookie": "^3.0.1",
+    "nookies": "^2.5.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
 }
